--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "description": "Test network plugin for Docker",
     "documentation": "https://docs.docker.com/engine/extend/plugins/",
-    "entrypoint": ["/bin/test-docker-netplugin"],
+    "entrypoint": ["/bin/global-net-plugin"],
     "network": {
            "type": "host"
            },
